feat(docs): add stylesheet and identity for landing page

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -9,6 +9,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
+@import 'homepage/variables.sass'
+
 $primary   : #1976d2
 $secondary : #26A69A
 $accent    : #9C27B0
