feat(mgmt): add styling for header and homepage

--- a/docs/src/css/homepage/app.sass
+++ b/docs/src/css/homepage/app.sass
@@ -1,16 +1,37 @@
-$homepage-primary: #00b4ff
-$homepage-secondary : #26A69A
-$homepage-accent    : #EA5E13
+@import 'variables'
 
-$homepage-dark      : #050a14
-$homepage-light     : #979797
+.text-h-primary
+  color: $homepage-primary
 
-$homepage-positive  : #21BA45
-$homepage-negative  : #C10015
-$homepage-info      : #31CCEC
-$homepage-warning   : #F2C037
+.bg-h-primary
+  background: $homepage-primary
 
-$homepage-brand-primary : #00B4FF
+.text-h-secondary
+  color: $homepage-secondary
 
-$homepage-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
-$homepage-font-family-avenir: Avenir, $homepage-font-family
+.bg-h-secondary
+  background: $homepage-secondary
+
+.text-h-accent
+  color: $homepage-accent
+
+.bg-h-accent
+  background: $homepage-accent
+
+.text-h-positive
+  color: $homepage-positive
+
+.bg-h-positive
+  background: $homepage-positive
+
+.text-h-negative
+  color: $homepage-negative
+
+.bg-h-negative
+  background: $homepage-negative
+
+.bg-h-dark
+  background: $homepage-dark
+
+.text-h-light
+  color: $homepage-light
