refactor(docs): should be landing page not homepage, rename to avoid confusion

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -1,5 +1,5 @@
 @import './prism-theme.sass'
-@import 'homepage/app.sass'
+@import 'landingpage/app.sass'
 
 .text-brand-primary
   color: $brand-primary !important
