--- a/docs/src/css/landingpage/variables.sass
+++ b/docs/src/css/landingpage/variables.sass
@@ -1,12 +1,12 @@
-$homepage-primary   : #00b4ff
-$homepage-secondary : #26A69A
-$homepage-accent    : #EA5E13
+$landingpage-primary: #00b4ff
+$landingpage-secondary: #26A69A
+$landingpage-accent: #EA5E13
 
-$homepage-dark      : #050a14
-$homepage-light     : #979797
+$landingpage-dark: #050a14
+$landingpage-light: #979797
 
-$homepage-positive  : #21BA45
-$homepage-negative  : #C10015
+$landingpage-positive: #21BA45
+$landingpage-negative: #C10015
 $homepage-info      : #31CCEC
 $homepage-warning   : #F2C037
 
