--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -9,7 +9,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-@import 'homepage/variables.sass'
+@import 'landingpage/variables.sass'
 
 $primary   : #1976d2
 $secondary : #26A69A
