--- a/docs/src/css/landing-page/utilities.scss
+++ b/docs/src/css/landing-page/utilities.scss
@@ -11,6 +11,8 @@ $additional-colors: (
   'lp-warning' $lp-warning,
   'lp-dark' $lp-dark,
   'lp-grey' $lp-grey,
+  'lp-light-grey' $lp-light-grey,
+  'lp-deep-dark' $lp-deep-dark,
 );
 
 @each $color-name, $color in $additional-colors {
@@ -52,10 +54,10 @@ $color-map: (
 @each $alpha-name, $alpha in $alpha-map {
   @each $color-name, $color in $color-map {
     .bg-#{$color-name}-#{$alpha-name}.bg-#{$color-name}-#{$alpha-name} {
-      background-color: rgba($color, $alpha);
+      background-color: rgba($color, $alpha) !important;
     }
     .text-#{$color-name}-#{$alpha-name}.text-#{$color-name}-#{$alpha-name} {
-      color: rgba($color, $alpha);
+      color: rgba($color, $alpha) !important;
     }
   }
 }
@@ -80,6 +82,10 @@ $text-size-list: 10, 12, 14, 16, 18, 20, 24, 28, 32, 36;
 .shadow-bottom {
   &-small {
     box-shadow: $lp-box-shadow--small;
+  }
+
+  &-medium {
+    box-shadow: $lp-box-shadow--medium;
   }
 
   &-large {
@@ -188,4 +194,8 @@ $letter-spacing-list: 25, 40, 100, 225, 263, 300, 375, 450, 675;
 
 .primary-line-height {
   line-height: 1.5;
+}
+
+.normal-line-height {
+  line-height: normal;
 }
