--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -11,16 +11,25 @@
 
 @import 'landing-page/variables.scss'
 
-$primary   : #1976d2
-$secondary : #26A69A
-$accent    : #9C27B0
+$primary: #1976d2
+$secondary: #26A69A
+$accent: #9C27B0
 
-$positive  : #21BA45
-$negative  : #C10015
-$info      : #31CCEC
-$warning   : #F2C037
+$positive: #21BA45
+$negative: #C10015
+$info: #31CCEC
+$warning: #F2C037
 
-$brand-primary : #00B4FF
+$brand-primary: #00B4FF
+
+$dark: #050a14
+$dark-text-color: #b8b8b8
+$grey-dark-background: #8b96a1
+$dark-background: #021b27
+$darker-background: #001e2f
+$darkest-background: #050a14
+
+
 
 $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family-avenir: Avenir, $font-family
