fix(docs): add more tweaks to improve image backgrounds - fixes #118

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -4,9 +4,9 @@ body.body--dark
   color: $dark-text-color
   background: $darker-background
 
-  .q-page-container img
+  .doc-img
     background-color: $grey-dark-background
-    padding: 2px
+    padding: 4px
     border-radius: 4px
 
   .q-drawer-container
@@ -104,6 +104,9 @@ body.body--dark
 
   .q-badge--single-line
     background: #5b667c
+  
+  .no-bg img
+    background-color: transparent
 
 .text-brand-primary
   color: #b8b8b8
