--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -24,7 +24,7 @@ $brand-primary: #00B4FF
 
 $dark: #050a14
 $dark-text-color: #b8b8b8
-$grey-dark-background: #8b96a1
+$grey-dark-background: #a8b6c5
 $dark-background: #021b27
 $darker-background: #001e2f
 $darkest-background: #050a14
