feat(extras): updated MDI SVG and webfonts => v6.6.96

--- a/extras/mdi-v6/mdi-v6.css
+++ b/extras/mdi-v6/mdi-v6.css
@@ -254,6 +254,10 @@
   content: "\F05B5";
 }
 
+.mdi-account-hard-hat-outline::before {
+  content: "\F1A1F";
+}
+
 .mdi-account-heart::before {
   content: "\F0899";
 }
@@ -400,6 +404,14 @@
 
 .mdi-account-remove-outline::before {
   content: "\F0AED";
+}
+
+.mdi-account-school::before {
+  content: "\F1A20";
+}
+
+.mdi-account-school-outline::before {
+  content: "\F1A21";
 }
 
 .mdi-account-search::before {
@@ -2498,6 +2510,10 @@
   content: "\F06C4";
 }
 
+.mdi-asterisk-circle-outline::before {
+  content: "\F1A27";
+}
+
 .mdi-at::before {
   content: "\F0065";
 }
@@ -2520,6 +2536,10 @@
 
 .mdi-attachment::before {
   content: "\F0066";
+}
+
+.mdi-attachment-lock::before {
+  content: "\F19C4";
 }
 
 .mdi-audio-input-rca::before {
@@ -2560,6 +2580,10 @@
 
 .mdi-autorenew::before {
   content: "\F006A";
+}
+
+.mdi-autorenew-off::before {
+  content: "\F19E7";
 }
 
 .mdi-av-timer::before {
@@ -3230,6 +3254,14 @@
   content: "\F17E3";
 }
 
+.mdi-battery-clock::before {
+  content: "\F19E5";
+}
+
+.mdi-battery-clock-outline::before {
+  content: "\F19E6";
+}
+
 .mdi-battery-heart::before {
   content: "\F120F";
 }
@@ -3722,6 +3754,10 @@
   content: "\F00B9";
 }
 
+.mdi-bone-off::before {
+  content: "\F19E0";
+}
+
 .mdi-book::before {
   content: "\F00BA";
 }
@@ -3828,6 +3864,14 @@
 
 .mdi-book-education-outline::before {
   content: "\F16CA";
+}
+
+.mdi-book-heart::before {
+  content: "\F1A1D";
+}
+
+.mdi-book-heart-outline::before {
+  content: "\F1A1E";
 }
 
 .mdi-book-information-variant::before {
@@ -4498,6 +4542,10 @@
   content: "\F1771";
 }
 
+.mdi-brush-outline::before {
+  content: "\F1A0D";
+}
+
 .mdi-brush-variant::before {
   content: "\F1813";
 }
@@ -4976,6 +5024,14 @@
 
 .mdi-camera-iris::before {
   content: "\F0104";
+}
+
+.mdi-camera-lock::before {
+  content: "\F1A14";
+}
+
+.mdi-camera-lock-outline::before {
+  content: "\F1A15";
 }
 
 .mdi-camera-marker::before {
@@ -5800,6 +5856,10 @@
 
 .mdi-cellphone-arrow-down::before {
   content: "\F09D5";
+}
+
+.mdi-cellphone-arrow-down-variant::before {
+  content: "\F19C5";
 }
 
 .mdi-cellphone-basic::before {
@@ -10426,6 +10486,14 @@
   content: "\F0215";
 }
 
+.mdi-file-chart-check::before {
+  content: "\F19C6";
+}
+
+.mdi-file-chart-check-outline::before {
+  content: "\F19C7";
+}
+
 .mdi-file-chart-outline::before {
   content: "\F1029";
 }
@@ -10640,6 +10708,14 @@
 
 .mdi-file-lock::before {
   content: "\F0221";
+}
+
+.mdi-file-lock-open::before {
+  content: "\F19C8";
+}
+
+.mdi-file-lock-open-outline::before {
+  content: "\F19C9";
 }
 
 .mdi-file-lock-outline::before {
@@ -11422,6 +11498,62 @@
   content: "\F0DCD";
 }
 
+.mdi-folder-arrow-down::before {
+  content: "\F19E8";
+}
+
+.mdi-folder-arrow-down-outline::before {
+  content: "\F19E9";
+}
+
+.mdi-folder-arrow-left::before {
+  content: "\F19EA";
+}
+
+.mdi-folder-arrow-left-outline::before {
+  content: "\F19EB";
+}
+
+.mdi-folder-arrow-left-right::before {
+  content: "\F19EC";
+}
+
+.mdi-folder-arrow-left-right-outline::before {
+  content: "\F19ED";
+}
+
+.mdi-folder-arrow-right::before {
+  content: "\F19EE";
+}
+
+.mdi-folder-arrow-right-outline::before {
+  content: "\F19EF";
+}
+
+.mdi-folder-arrow-up::before {
+  content: "\F19F0";
+}
+
+.mdi-folder-arrow-up-down::before {
+  content: "\F19F1";
+}
+
+.mdi-folder-arrow-up-down-outline::before {
+  content: "\F19F2";
+}
+
+.mdi-folder-arrow-up-outline::before {
+  content: "\F19F3";
+}
+
+.mdi-folder-cancel::before {
+  content: "\F19F4";
+}
+
+.mdi-folder-cancel-outline::before {
+  content: "\F19F5";
+}
+
 .mdi-folder-check::before {
   content: "\F197E";
 }
@@ -11468,6 +11600,14 @@
 
 .mdi-folder-eye-outline::before {
   content: "\F178B";
+}
+
+.mdi-folder-file::before {
+  content: "\F19F6";
+}
+
+.mdi-folder-file-outline::before {
+  content: "\F19F7";
 }
 
 .mdi-folder-google-drive::before {
@@ -11582,6 +11722,14 @@
   content: "\F0C81";
 }
 
+.mdi-folder-off::before {
+  content: "\F19F8";
+}
+
+.mdi-folder-off-outline::before {
+  content: "\F19F9";
+}
+
 .mdi-folder-open::before {
   content: "\F0770";
 }
@@ -11592,6 +11740,14 @@
 
 .mdi-folder-outline::before {
   content: "\F0256";
+}
+
+.mdi-folder-play::before {
+  content: "\F19FA";
+}
+
+.mdi-folder-play-outline::before {
+  content: "\F19FB";
 }
 
 .mdi-folder-plus::before {
@@ -11608,6 +11764,14 @@
 
 .mdi-folder-pound-outline::before {
   content: "\F0D0A";
+}
+
+.mdi-folder-question::before {
+  content: "\F19CA";
+}
+
+.mdi-folder-question-outline::before {
+  content: "\F19CB";
 }
 
 .mdi-folder-refresh::before {
@@ -11696,6 +11860,14 @@
 
 .mdi-folder-upload-outline::before {
   content: "\F10ED";
+}
+
+.mdi-folder-wrench::before {
+  content: "\F19FC";
+}
+
+.mdi-folder-wrench-outline::before {
+  content: "\F19FD";
 }
 
 .mdi-folder-zip::before {
@@ -12402,6 +12574,10 @@
   content: "\F1045";
 }
 
+.mdi-fruit-pear::before {
+  content: "\F1A0E";
+}
+
 .mdi-fruit-pineapple::before {
   content: "\F1046";
 }
@@ -12584,6 +12760,10 @@
 
 .mdi-garage-variant-lock::before {
   content: "\F17FC";
+}
+
+.mdi-gas-burner::before {
+  content: "\F1A1B";
 }
 
 .mdi-gas-cylinder::before {
@@ -13814,6 +13994,14 @@
   content: "\F0D16";
 }
 
+.mdi-home-clock::before {
+  content: "\F1A12";
+}
+
+.mdi-home-clock-outline::before {
+  content: "\F1A13";
+}
+
 .mdi-home-edit::before {
   content: "\F1159";
 }
@@ -14386,6 +14574,14 @@
   content: "\F087C";
 }
 
+.mdi-image-refresh::before {
+  content: "\F19FE";
+}
+
+.mdi-image-refresh-outline::before {
+  content: "\F19FF";
+}
+
 .mdi-image-remove::before {
   content: "\F1418";
 }
@@ -14408,6 +14604,14 @@
 
 .mdi-image-size-select-small::before {
   content: "\F0C8F";
+}
+
+.mdi-image-sync::before {
+  content: "\F1A00";
+}
+
+.mdi-image-sync-outline::before {
+  content: "\F1A01";
 }
 
 .mdi-image-text::before {
@@ -15178,6 +15382,10 @@
   content: "\F0DD8";
 }
 
+.mdi-lecturn::before {
+  content: "\F1AF0";
+}
+
 .mdi-led-off::before {
   content: "\F032B";
 }
@@ -15226,6 +15434,10 @@
   content: "\F0331";
 }
 
+.mdi-library-outline::before {
+  content: "\F1A22";
+}
+
 .mdi-library-shelves::before {
   content: "\F0BA9";
 }
@@ -15254,8 +15466,20 @@
   content: "\F097E";
 }
 
+.mdi-light-switch-off::before {
+  content: "\F1A24";
+}
+
 .mdi-lightbulb::before {
   content: "\F0335";
+}
+
+.mdi-lightbulb-alert::before {
+  content: "\F19E1";
+}
+
+.mdi-lightbulb-alert-outline::before {
+  content: "\F19E2";
 }
 
 .mdi-lightbulb-auto::before {
@@ -15340,6 +15564,14 @@
 
 .mdi-lightbulb-outline::before {
   content: "\F0336";
+}
+
+.mdi-lightbulb-question::before {
+  content: "\F19E3";
+}
+
+.mdi-lightbulb-question-outline::before {
+  content: "\F19E4";
 }
 
 .mdi-lightbulb-spot::before {
@@ -16182,6 +16414,14 @@
   content: "\F0363";
 }
 
+.mdi-message-fast::before {
+  content: "\F19CC";
+}
+
+.mdi-message-fast-outline::before {
+  content: "\F19CD";
+}
+
 .mdi-message-flash::before {
   content: "\F15A9";
 }
@@ -16292,6 +16532,14 @@
 
 .mdi-message-text-clock-outline::before {
   content: "\F1174";
+}
+
+.mdi-message-text-fast::before {
+  content: "\F19CE";
+}
+
+.mdi-message-text-fast-outline::before {
+  content: "\F19CF";
 }
 
 .mdi-message-text-lock::before {
@@ -16632,6 +16880,14 @@
 
 .mdi-monitor::before {
   content: "\F0379";
+}
+
+.mdi-monitor-arrow-down::before {
+  content: "\F19D0";
+}
+
+.mdi-monitor-arrow-down-variant::before {
+  content: "\F19D1";
 }
 
 .mdi-monitor-cellphone::before {
@@ -17286,6 +17542,10 @@
   content: "\F0391";
 }
 
+.mdi-needle-off::before {
+  content: "\F19D2";
+}
+
 .mdi-netflix::before {
   content: "\F0746";
 }
@@ -17560,6 +17820,14 @@
 
 .mdi-notebook-edit-outline::before {
   content: "\F14E9";
+}
+
+.mdi-notebook-heart::before {
+  content: "\F1A0B";
+}
+
+.mdi-notebook-heart-outline::before {
+  content: "\F1A0C";
 }
 
 .mdi-notebook-minus::before {
@@ -17954,6 +18222,10 @@
   content: "\F1052";
 }
 
+.mdi-numeric-off::before {
+  content: "\F19D3";
+}
+
 .mdi-numeric-positive-1::before {
   content: "\F15CB";
 }
@@ -18184,6 +18456,30 @@
 
 .mdi-package-variant-closed::before {
   content: "\F03D7";
+}
+
+.mdi-package-variant-closed-minus::before {
+  content: "\F19D4";
+}
+
+.mdi-package-variant-closed-plus::before {
+  content: "\F19D5";
+}
+
+.mdi-package-variant-closed-remove::before {
+  content: "\F19D6";
+}
+
+.mdi-package-variant-minus::before {
+  content: "\F19D7";
+}
+
+.mdi-package-variant-plus::before {
+  content: "\F19D8";
+}
+
+.mdi-package-variant-remove::before {
+  content: "\F19D9";
 }
 
 .mdi-page-first::before {
@@ -18422,6 +18718,10 @@
   content: "\F03E2";
 }
 
+.mdi-paperclip-lock::before {
+  content: "\F19DA";
+}
+
 .mdi-parachute::before {
   content: "\F0CB4";
 }
@@ -18638,6 +18938,22 @@
   content: "\F03F0";
 }
 
+.mdi-percent-box::before {
+  content: "\F1A02";
+}
+
+.mdi-percent-box-outline::before {
+  content: "\F1A03";
+}
+
+.mdi-percent-circle::before {
+  content: "\F1A04";
+}
+
+.mdi-percent-circle-outline::before {
+  content: "\F1A05";
+}
+
 .mdi-percent-outline::before {
   content: "\F1278";
 }
@@ -18700,6 +19016,10 @@
 
 .mdi-phone-classic-off::before {
   content: "\F1279";
+}
+
+.mdi-phone-clock::before {
+  content: "\F19DB";
 }
 
 .mdi-phone-dial::before {
@@ -19040,6 +19360,22 @@
 
 .mdi-play-box::before {
   content: "\F127A";
+}
+
+.mdi-play-box-lock::before {
+  content: "\F1A16";
+}
+
+.mdi-play-box-lock-open::before {
+  content: "\F1A17";
+}
+
+.mdi-play-box-lock-open-outline::before {
+  content: "\F1A18";
+}
+
+.mdi-play-box-lock-outline::before {
+  content: "\F1A19";
 }
 
 .mdi-play-box-multiple::before {
@@ -19546,6 +19882,10 @@
   content: "\F042E";
 }
 
+.mdi-projector-off::before {
+  content: "\F1A23";
+}
+
 .mdi-projector-screen::before {
   content: "\F042F";
 }
@@ -19846,6 +20186,14 @@
   content: "\F043F";
 }
 
+.mdi-raw::before {
+  content: "\F1A0F";
+}
+
+.mdi-raw-off::before {
+  content: "\F1A10";
+}
+
 .mdi-ray-end::before {
   content: "\F0440";
 }
@@ -19892,6 +20240,10 @@
 
 .mdi-receipt::before {
   content: "\F0449";
+}
+
+.mdi-receipt-outline::before {
+  content: "\F19DC";
 }
 
 .mdi-record::before {
@@ -20390,6 +20742,10 @@
   content: "\F0B46";
 }
 
+.mdi-robot-industrial-outline::before {
+  content: "\F1A1A";
+}
+
 .mdi-robot-love::before {
   content: "\F16A5";
 }
@@ -20656,6 +21012,10 @@
 
 .mdi-sale::before {
   content: "\F046F";
+}
+
+.mdi-sale-outline::before {
+  content: "\F1A06";
 }
 
 .mdi-salesforce::before {
@@ -22510,6 +22870,14 @@
   content: "\F14FB";
 }
 
+.mdi-square-rounded-badge::before {
+  content: "\F1A07";
+}
+
+.mdi-square-rounded-badge-outline::before {
+  content: "\F1A08";
+}
+
 .mdi-square-rounded-outline::before {
   content: "\F14FC";
 }
@@ -24082,6 +24450,14 @@
   content: "\F0A1A";
 }
 
+.mdi-toggle-switch-variant::before {
+  content: "\F1A25";
+}
+
+.mdi-toggle-switch-variant-off::before {
+  content: "\F1A26";
+}
+
 .mdi-toilet::before {
   content: "\F09AB";
 }
@@ -24422,6 +24798,10 @@
   content: "\F192D";
 }
 
+.mdi-transmission-tower-off::before {
+  content: "\F19DD";
+}
+
 .mdi-trash-can::before {
   content: "\F0A79";
 }
@@ -24498,6 +24878,14 @@
   content: "\F0537";
 }
 
+.mdi-triangle-small-down::before {
+  content: "\F1A09";
+}
+
+.mdi-triangle-small-up::before {
+  content: "\F1A0A";
+}
+
 .mdi-triangle-wave::before {
   content: "\F147C";
 }
@@ -24532,6 +24920,14 @@
 
 .mdi-truck::before {
   content: "\F053D";
+}
+
+.mdi-truck-alert::before {
+  content: "\F19DE";
+}
+
+.mdi-truck-alert-outline::before {
+  content: "\F19DF";
 }
 
 .mdi-truck-cargo-container::before {
@@ -25050,6 +25446,10 @@
   content: "\F0567";
 }
 
+.mdi-video-2d::before {
+  content: "\F1A1C";
+}
+
 .mdi-video-3d::before {
   content: "\F07FD";
 }
@@ -25452,6 +25852,10 @@
 
 .mdi-wall::before {
   content: "\F07FE";
+}
+
+.mdi-wall-fire::before {
+  content: "\F1A11";
 }
 
 .mdi-wall-sconce::before {
@@ -26434,10 +26838,49 @@
 .mdi-light.mdi-inactive:before {
   color: rgba(255, 255, 255, 0.3);
 }
+
+.mdi-rotate-45 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(45deg);
+            transform: scaleX(-1) rotate(45deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(45deg);
+            -ms-transform: rotate(45deg);
+            transform: scaleY(-1) rotate(45deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
+}
+
 .mdi-rotate-45:before {
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
+}
+
+.mdi-rotate-90 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(90deg);
+            transform: scaleX(-1) rotate(90deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(90deg);
+            -ms-transform: rotate(90deg);
+            transform: scaleY(-1) rotate(90deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
 }
 
 .mdi-rotate-90:before {
@@ -26446,10 +26889,48 @@
   transform: rotate(90deg);
 }
 
+.mdi-rotate-135 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(135deg);
+            transform: scaleX(-1) rotate(135deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(135deg);
+            -ms-transform: rotate(135deg);
+            transform: scaleY(-1) rotate(135deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
+}
+
 .mdi-rotate-135:before {
   -webkit-transform: rotate(135deg);
   -ms-transform: rotate(135deg);
   transform: rotate(135deg);
+}
+
+.mdi-rotate-180 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(180deg);
+            transform: scaleX(-1) rotate(180deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(180deg);
+            -ms-transform: rotate(180deg);
+            transform: scaleY(-1) rotate(180deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
 }
 
 .mdi-rotate-180:before {
@@ -26458,16 +26939,73 @@
   transform: rotate(180deg);
 }
 
+.mdi-rotate-225 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(225deg);
+            transform: scaleX(-1) rotate(225deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(225deg);
+            -ms-transform: rotate(225deg);
+            transform: scaleY(-1) rotate(225deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
+}
+
 .mdi-rotate-225:before {
   -webkit-transform: rotate(225deg);
   -ms-transform: rotate(225deg);
   transform: rotate(225deg);
 }
 
+.mdi-rotate-270 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(270deg);
+            transform: scaleX(-1) rotate(270deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(270deg);
+            -ms-transform: rotate(270deg);
+            transform: scaleY(-1) rotate(270deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
+}
+
 .mdi-rotate-270:before {
   -webkit-transform: rotate(270deg);
   -ms-transform: rotate(270deg);
   transform: rotate(270deg);
+}
+
+.mdi-rotate-315 {
+  /*
+        // Not included in production
+        &.mdi-flip-h:before {
+            -webkit-transform: scaleX(-1) rotate(315deg);
+            transform: scaleX(-1) rotate(315deg);
+            filter: FlipH;
+            -ms-filter: "FlipH";
+        }
+        &.mdi-flip-v:before {
+            -webkit-transform: scaleY(-1) rotate(315deg);
+            -ms-transform: rotate(315deg);
+            transform: scaleY(-1) rotate(315deg);
+            filter: FlipV;
+            -ms-filter: "FlipV";
+        }
+        */
 }
 
 .mdi-rotate-315:before {
