--- a/create-quasar/templates/app/quasar-v1/js/BASE/src/index.template.html
+++ b/create-quasar/templates/app/quasar-v1/js/BASE/src/index.template.html
@@ -9,6 +9,9 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<%= '\<% if (ctx.mode.cordova || ctx.mode.capacitor) { %\>, viewport-fit=cover \<% } %\>' %>">
 
+    <meta property="og:title" content="<%= '\<%= productName %\>' %>">
+    <meta property="og:description" content="<%= '\<%= productDescription %\>' %>">
+
     <link rel="icon" type="image/png" sizes="128x128" href="icons/favicon-128x128.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
