fix(create-quasar): add missing hyphen

--- a/create-quasar/templates/app/quasar-v1/ts/BASE/src/index.template.html
+++ b/create-quasar/templates/app/quasar-v1/ts/BASE/src/index.template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><% '\<%= productName %\>' %></title>
+    <title><%= '\<%= productName %\>' %></title>
 
     <meta charset="utf-8">
     <meta name="description" content="<%= '\<%= productDescription %\>' %>">
