--- a/ui/src/components/dialog/QDialog.sass
+++ b/ui/src/components/dialog/QDialog.sass
@@ -39,8 +39,8 @@
         max-height: 100vh
         max-width: 100vw
         border-radius: 0 !important
-        top: 0px !important
-        left: 0px !important
+        top: 0 !important
+        left: 0 !important
 
     &--top, &--bottom
       padding-top: 0 !important
