fix(VirtualScroll): don't use stylesheet to anchor active el - CSP related #13025
#13025

--- a/ui/src/components/virtual-scroll/QVirtualScroll.styl
+++ b/ui/src/components/virtual-scroll/QVirtualScroll.styl
@@ -6,8 +6,11 @@
     outline: none
     contain: content
 
-    *
+    > *
       overflow-anchor: none
+
+    > [data-q-vs-anchor]
+      overflow-anchor: auto
 
   &__padding
     background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,0) 20%, rgba(128, 128, 128, .03) 20%, rgba(128, 128, 128, .08) 50%, rgba(128, 128, 128, .03) 80%, rgba(255,255,255,0) 80%, rgba(255,255,255,0)) /* rtl:ignore */
