--- a/app-vite/templates/cordova/www/index.html
+++ b/app-vite/templates/cordova/www/index.html
@@ -9,7 +9,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, viewport-fit=cover">
 
-    <style type="text/css">
+    <style>
       .page {
         display: flex;
         flex-direction: column;
