--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -20,5 +20,5 @@ $warning   : #F2C037
 
 $brand-primary : #00B4FF
 
-$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
+$font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Liberation Sans", Helvetica, Arial, sans-serif
 $font-family-avenir: Avenir, $font-family
