feat(ui): support for Material Symbols icon sets

--- a/ui/src/components/icon/QIcon.sass
+++ b/ui/src/components/icon/QIcon.sass
@@ -28,7 +28,10 @@
 .material-icons,
 .material-icons-outlined,
 .material-icons-round,
-.material-icons-sharp
+.material-icons-sharp,
+.material-symbols-outlined,
+.material-symbols-rounded,
+.material-symbols-sharp
   user-select: none
   cursor: inherit
   font-size: inherit
