fix(QIcon): fix QIcon shrink without breaking aspect #12016, #13521

--- a/ui/src/components/icon/QIcon.sass
+++ b/ui/src/components/icon/QIcon.sass
@@ -2,6 +2,7 @@
   line-height: 1
   width: 1em
   height: 1em
+  flex-shrink: 0
   letter-spacing: normal
   text-transform: none
   white-space: nowrap
@@ -21,8 +22,8 @@
 
   > svg,
   > img
-    width: 1em
-    height: 1em
+    width: 100%
+    height: 100%
 
 .q-icon,
 .material-icons,
