--- a/ui/src/css/core/colors.styl
+++ b/ui/src/css/core/colors.styl
@@ -7,6 +7,7 @@
   --q-color-info:         $info
   --q-color-warning:      $warning
   --q-color-dark:         $dark
+  --q-color-dark-page:    $dark-page
 
 .text-dark
   color: $dark !important
