fix(QTable): (backport from Qv2) Unnecessary border after last row of nested table (#13204)

--- a/ui/src/components/table/QTable.sass
+++ b/ui/src/components/table/QTable.sass
@@ -186,7 +186,7 @@
  * Separators
  */
 .q-table--horizontal-separator, .q-table--cell-separator
-  thead th, tbody tr:not(:last-child) td
+  thead th, tbody tr:not(:last-child) > td
     border-bottom-width: 1px
 
 .q-table--vertical-separator, .q-table--cell-separator
