fix(QTimeline): svg icon have incorrect size
Fixes the regression introduced in #13651

--- a/ui/src/components/timeline/QTimeline.sass
+++ b/ui/src/components/timeline/QTimeline.sass
@@ -60,6 +60,9 @@
       line-height: 38px
       width: 100%
       color: #fff
+      > svg 
+        width: 1em
+        height: 1em
 
   &__dot-img
     position: absolute
